# MemMem

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  MANIFEST.in  README.md  REQUIREMENTS.md  docker-compose.traefik.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  setup.py  test-deployment.py
docs/: SDK_GUIDE.md
examples/: advanced_features.py  basic_usage.py  chatbot_integration.py
k8s/helm/memorybank/: Chart.yaml  values.yaml
k8s/helm/memorybank/templates/: deployment.yaml
memorybank/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py  py.typed
monitoring/: alert_rules.yml  prometheus.yml
scripts/: debug-deployment.sh  deploy-tenant.sh  manage-tenants.py
src/: embedding_client.py  forgetting_curve.py  llm_client.py  memory_manager.py  models.py  scheduler.py  vector_store.py
tests/: __init__.py  test_config.py  test_models.py
